Fix hero button on mobile and blurry image in blog section

--- a/web/src/components/hero/hero.module.css
+++ b/web/src/components/hero/hero.module.css
@@ -49,15 +49,23 @@
   flex-direction: column;
   height: 100%;
   justify-content: space-between;
-  padding: rem(50) 0;
+  padding: rem(50 0 100);
   position: relative;
   z-index: 3;
+
+  @media ($mdMin) {
+    padding: rem(50 0);
+  }
 }
 
 .homeText {
   color: color(#ffffff shade(5%));
-  margin-bottom: rem(150);
+  margin-bottom: rem(100);
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+
+  @media ($mdMin) {
+    margin-bottom: rem(150);
+  }
 }
 
 .textHeader {
